Fix z-indexing of links when using icon-bg

--- a/src/Netrunnerdb/BuilderBundle/Resources/public/css/icons.css
+++ b/src/Netrunnerdb/BuilderBundle/Resources/public/css/icons.css
@@ -1,4 +1,4 @@
-@font-face{font-family:'netrunner';src:url('../fonts/netrunner.eot');src:url('../fonts/netrunner.eot?#iefix') format('embedded-opentype'),url('../fonts/netrunner.woff') format('woff'),url('../fonts/netrunner.ttf') format('truetype'),url('../fonts/netrunner.svg#netrunner') format('svg');font-weight: normal;font-style: normal;}
+@font-face{font-family:'netrunner';src:url('../fonts/Netrunner.eot');src:url('../fonts/Netrunner.eot?#iefix') format('embedded-opentype'),url('../fonts/Netrunner.woff') format('woff'),url('../fonts/Netrunner.ttf') format('truetype'),url('../fonts/Netrunner.svg#netrunner') format('svg');font-weight: normal;font-style: normal;}
 
 .icon {
 	font-family: 'netrunner';
@@ -37,6 +37,7 @@
 	line-height:4em;
 	left: 0;
 	opacity: 0.2;
+    z-index: 0;
 }
 .icon-credit:before {
 	content: "\e600";
@@ -48,6 +49,9 @@
 	content: "\e602";
 }
 .icon-shaper:before {
+	content: "\e613";
+}
+.icon-shaper-smooth:before {
 	content: "\e603";
 }
 .icon-subroutine:before {
